--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-stater-data-rest'
-    implementation 'org.springframework.boot:spring-boot-stater-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-    runtimeOnly 'come.h2database:h2'
+    runtimeOnly 'com.h2database:h2'
 
     annotationProcessor("org.projectlombok:lombok")
-    compileOnly("org.projectlombok:lomebok")
+    compileOnly("org.projectlombok:lombok")
 }
 
 test {
